--- a/css/main.css
+++ b/css/main.css
@@ -2,26 +2,30 @@ body{
     background: rgb(141, 233, 149);
     color: rgb(26, 8, 43);
     margin: 0 auto;
+    display: grid;
 
 }
 section{
-    margin: 5px 0px;
-    padding: 20px 10px 20px 10px;
-    border: 1px;
+    margin: 10px 0px;
+    border: 3px;
+    text-align: center;
    
 }
 img{
-    width: 460px;
+    width: 360px;
     height: 220;
 ;
 }
 main{
 
-        display: grid;     
+        display: grid;   
+        text-align: center;
    
 }
 article {
    
  grid-auto-rows:auto;
 }
-
+table{
+    text-align: center;
+}
