--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,5 +1,5 @@
 img{
-    width: 400px;
+    width: 300px;
     height: 300px;
    
 }
@@ -15,6 +15,11 @@ article{
 body{
     background-image: url(../photo/giphy.gif);
   color: blue;
+}
+section{
+    margin: 0px 1px;
+    border: 2px solid #FFF;
+    border-radius: 1000px;
   
-
+    box-shadow: 5px 5px 0px 0px rgb(238, 185, 185);
 }
