--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body{
     color: rgb(26, 8, 43);
     margin: 0 auto;
     display: grid;
-
+font-family: 'Courier New', Courier, monospace;
 }
 section{
     margin: 10px 0px;
@@ -19,7 +19,7 @@ img{
 }
 main{
 
-         
+    font-family: 'Courier New', Courier, monospace;     
         text-align: center;
    
 }
